# Shape-Recognition

./: Dokumetation.md  README.md  log.csv  main.py  pyproject.toml  test.py  test2.py
